--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   --content-color: #8BACD9;
   --card-bgcolor: hsl(216, 50%, 16%);
   --line-color: hsl(215, 32%, 27%);
+  --eth-color: hsl(178, 100%, 50%);
 }
 
 * {
@@ -58,7 +59,7 @@ hr {
 }
 
 .main__card-image {
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
 
   img {
     border-radius: 8px;
@@ -68,7 +69,7 @@ hr {
 
 .main__card-content {
   h1 {
-    margin-bottom: 1rem;
+    margin-bottom: 0.7rem;
   }
 
   p {
@@ -82,12 +83,18 @@ hr {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-block: 1rem;
+  margin-block: 0.8rem;
 
   .eth {
     display: flex;
     gap: 0.8rem;
     align-items: center;
+    
+    p {
+      font-size: 15px;
+      color: var(--eth-color);
+      font-weight: 600;
+    }
 
     img {
       width: 11px;
@@ -99,6 +106,10 @@ hr {
     display: flex;
     align-items: center;
     gap: .5rem;
+
+    p {
+      font-size: 15px;
+    }
     
     img {
       width: 16px;
